Wed Sep  9 09:50:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * bin/tao_other_tests.lst:

          Stop running test that occationaly locksup the LynsOS kernal.

Tue Sep  8 16:16:17 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/Leader_Follower_Flushing_Strategy.cpp:

          Additional fix for bug#3697. It must fix Bug_1551_Regression
          which got broken by the original fix.

Tue Sep  8 10:46:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:
          set the correct header length for the next fragment. This
          fixes bugzilla 3275, thanks to Simon Massey for pointing this out

Mon Sep  7 21:31:28 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Invocation.h:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.cpp:

          More clean up of debug messages, improve the detection of entry
          and exit from request waits.

Mon Sep  7 06:05:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/IFR_Service/IFR_Service.mpc:
          Removed support for mcpp again, mcpp has not been enabled

Mon Sep  7 06:00:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/logWalker/Invocation.cpp
        * utils/logWalker/Invocation.h
          Fixed problems with versioned namespace build

Fri Sep  4 02:34:00 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Log.cpp:

          Removed verbose diagnostic debug statements.

Thu Sep  3 17:40:13 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/HostProcess.h:
        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Invocation.h:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.h:
        * utils/logWalker/Log.cpp:
        * utils/logWalker/Session.cpp:

          General improvements to the tool. It is now able to handle log