@@ -235,8 +235,7 @@ TAO_Sync_Scope_Policy::hook (TAO_ORB_Core *orb_core,
 
       if (CORBA::is_nil (policy.in ()))
         {
-          has_synchronization = true;
-          scope = Messaging::SYNC_WITH_TRANSPORT;
+          has_synchronization = false;
           return;
         }
       Messaging::SyncScopePolicy_var p =
