@@ -1,3 +1,13 @@
+Wed Sep  9 12:38:15 UTC 2009  Vladimir Zykov  <vz@prismtech.com>
+
+        * tao/ORB_Core.cpp:
+        * tao/Leader_Follower_Flushing_Strategy.cpp:
+        * tao/Messaging/Messaging_Policy_i.cpp:
+        * tao/ORB_Core.h:
+
+          Reverted fixes for bug#3682 and bug#3697 as there are
+          problems with them and the new x.7.3 release is very close.
+
 Wed Sep  9 09:50:00 UTC 2009  Simon Massey  <sma@prismtech.com>
 
         * bin/tao_other_tests.lst:
